crates/oxvg_actions/src/actions/manipulate/snapshots/oxvg_actions__actions__manipulate__path__test__subtract.snap
---
source: crates/oxvg_actions/src/actions/manipulate/path.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><path d="M2 10V2h8v3.832a4 4 0 0 0-4.167 4.166ZM6.33 9.997a3.5 3.5 0 0 1 3.669-3.668L10 10H6.33Z" fill-rule="evenodd"/><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>path</oxvg:arg></oxvg:action><oxvg:action oxvg:id="PathSubtract"/></oxvg:history><oxvg:selection oxvg:ids="4"/></oxvg:state></svg>
